# lecture-md-tool

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  lecture_md_api_postprocess.py  lecture_md_asr.py  lecture_md_batch.py  lecture_md_correct.py  lecture_md_dedupe.py  lecture_md_notes.py  md_notes_to_pdf.py  merge_hls_segments.py  pyproject.toml  requirements.txt  run_autoslides_courses.ps1  run_one.ps1  run_one.sh  run_today.ps1  run_today.sh
.github/workflows/: build-apps.yml
assets/: app-icon.icns
packaging/pyinstaller/: gui_entry.py  lecture-md-gui.spec
scripts/: run_courses.ps1  run_one.ps1  run_one.sh  run_today.ps1  run_today.sh
src/lecture_md/: __init__.py  __main__.py  asr.py  cli.py  client.py  config.py  correct.py  dedupe.py  gui.py  hls.py  notes.py  pdf.py  pipeline.py  postprocess.py  runtime.py  slides_md.py
src/lecture_md/gui/: __init__.py  app.py  envcheck.py  guide.md  runner.py  theme.py  widgets.py
tools/: make_demo_gif.py
