[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lecture-md-tool"
version = "1.0.0"
description = "Turn lecture screen-recording videos into slide-aligned Markdown notes with ASR and LLM cleanup."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Decent898" }]
requires-python = ">=3.10"
keywords = ["lecture", "asr", "whisper", "slides", "markdown", "notes", "ocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "requests>=2.31",
    "Pillow>=10.0",
    "slidegeist>=2026.4.23",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.0"]
ocr = ["rapidocr-onnxruntime>=1.4.4"]
gui = ["PyQt6>=6.6"]
all = ["faster-whisper>=1.0", "rapidocr-onnxruntime>=1.4.4", "PyQt6>=6.6"]

[project.scripts]
lecture-md = "lecture_md.cli:main"
lecture-md-gui = "lecture_md.gui:main"

[project.urls]
Homepage = "https://github.com/Decent898/lecture-md-tool"
Repository = "https://github.com/Decent898/lecture-md-tool"
Issues = "https://github.com/Decent898/lecture-md-tool/issues"

[tool.setuptools.packages.find]
where = ["src"]
